src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Sourced_By_IDG__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When a record is created by IDG this is set to true</description>
        <inlineHelpText>When a record is created by Intelligent Data Group this is set to true</inlineHelpText>
        <label>Sourced By IDG</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Statement_Batch__c</fullName>
        <label>Statement Batch</label>
        <picklist>
            <picklistValues>
                <fullName>Statement1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Statement2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Statement3</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Subscriber__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether Subscriber or not</description>
        <inlineHelpText>Whether Subscriber or not</inlineHelpText>
        <label>Subscriber</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Supplier_Approval_Status__c</fullName>
        <inlineHelpText>Supplier Approval Status (entered by the Standards Manager).</inlineHelpText>
        <label>Supplier Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Current High Risk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Current Low Risk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exempt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Renewal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Archived</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Supplier_Comments__c</fullName>
        <description>Comments related to the account being a supplier.</description>
        <inlineHelpText>Any relevant comments regarding this supplier or its products/services.</inlineHelpText>
        <label>Supplier Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Supplier_Criticality__c</fullName>
        <description>Used for Supplier Evaluation</description>
        <inlineHelpText>How critical are the products/services provided to the British Safety Council?
(5= Highest, 1=Lowest)</inlineHelpText>
        <label>Supplier Criticality</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Supplier_Evaluation_Score__c</fullName>
        <description>Calculates supplier evaluation score based on supplier question fields</description>
        <formula>Supplier_One_Off_Score__c  +  Supplier_Service_Type_Score__c +  Supplier_Value_Score__c  +value( text( Supplier_Criticality__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If this score is higher than 11, please send supplier application form.
(BMS &gt; Departments &gt; Finance).</inlineHelpText>
        <label>Supplier Evaluation Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Supplier_One_Off_Score__c</fullName>
        <description>Used for Supplier Evaluation</description>
        <formula>IF( Supplier_One_Off__c ,0, 3)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Used for Supplier Evaluation</inlineHelpText>
        <label>Supplier One Off Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Supplier_One_Off__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for Supplier Evaluation</description>
        <inlineHelpText>Is this a one off purchase?</inlineHelpText>
        <label>Supplier One Off</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Supplier_Renewal_Date__c</fullName>
        <description>Depending on the Supplier Evaluation Score, add date the supplier needs to be renewed.
If Score under 11 = 2 Years from created/renewed date
If Score over 11 = 1 Year from created/renewed date</description>
        <inlineHelpText>Supplier approval expires after 2 years (entered by the Standards Manager).</inlineHelpText>
        <label>Supplier Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Supplier_Service_Type_Score__c</fullName>
        <description>Used for Supplier Evaluation</description>
        <formula>CASE(Supplier_Service_Type__c,
&quot;Stationary&quot;,1,
&quot;Printing Supplies&quot;,1,
&quot;Postage&quot;,1,
&quot;Courier&quot;,1,
&quot;Hotels&quot;,1,
&quot;Travel -  Car / Rail / Air&quot;,1,
&quot;Rented Vehicle&quot;,1,
&quot;Safety Network and Information Line&quot;,3,
&quot;Venue&quot;,4,
&quot;Catering&quot;,3,
&quot;Equipment Hire&quot;,3,
&quot;Exhibitions&quot;,4,
&quot;Publications&quot;,4,
&quot;Craft Service&quot;,2,
&quot;Advertising&quot;,4,
&quot;Branding&quot;,4,
&quot;Promotions&quot;,4,
&quot;E-shots / E-newsletters&quot;,4,
&quot;Research&quot;,4,
&quot;IT Hardware&quot;,5,
&quot;IT Software&quot;,4,
&quot;Maintenance&quot;,4,
&quot;Cleaning Services&quot;,3,
&quot;Property&quot;,3,
&quot;IT Consultants&quot;,4,
&quot;Refurbishment&quot;,3,
&quot;Utilities&quot;,2,
&quot;Magazines and Publications&quot;,3,
&quot;Insurance Services&quot;,2,
&quot;Legal Service&quot;,3,
&quot;Audit Service&quot;,3,
&quot;Consultancy Services&quot;,5,
&quot;Financial Services&quot;,3,
&quot;Rent&quot;,1,
&quot;Associate&quot;,4,
&quot;Storage&quot;,3,
&quot;Invigilators&quot;,2,
&quot;Assessors&quot;,3,
&quot;Adjudicator&quot;,2,
&quot;Telecommunications&quot;,3,
&quot;Graphic Design&quot;,3,
&quot;Recruitment&quot;,2,
&quot;PR Services&quot;,2,
&quot;Social Committee&quot;,1,
&quot;Health Services&quot;,3,
&quot;Digital Marketing Services&quot;,2,
&quot;Translating Services&quot;,2,
&quot;Training and Qualifications&quot;,3,
&quot;Accreditation Bodies&quot;,2,
&quot;Other&quot;,5,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Used for Supplier Evaluation</inlineHelpText>
        <label>Supplier Service Type Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Supplier_Service_Type__c</fullName>
        <description>Used for Supplier Evaluation</description>
        <inlineHelpText>Please select the relevant industry sector.</inlineHelpText>
        <label>Supplier Service Type</label>
        <picklist>
            <picklistValues>
                <fullName>Accreditation Bodies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adjudicator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advertising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assessors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Associate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audit Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Branding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Catering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cleaning Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consultancy Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Courier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Craft Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital Marketing Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equipment Hire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-shots / E-newsletters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exhibitions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Graphic Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hotels</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invigilators</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT Consultants</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT Hardware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT Software</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Magazines and Publications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maintenance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Postage</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Supplier_Value_Score__c</fullName>
        <description>Used for Supplier Evaluation</description>
        <formula>CASE(Supplier_Value__c,
&quot;£0 - £10&quot;, 1,
&quot;£101-200&quot;, 1,
&quot;£201-£1,000&quot;, 2,
&quot;£1,001-£2,000&quot;, 3,
&quot;£2001 - £4000&quot;, 4,
&quot;4000+&quot;, 5,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Used for Supplier Evaluation</inlineHelpText>
        <label>Supplier Value Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Supplier_Value__c</fullName>
        <description>Used for Supplier Evaluation</description>
        <inlineHelpText>Please enter the value of the products/services you wish to purchase (average spend per year).</inlineHelpText>
        <label>Supplier Value</label>
        <picklist>
            <picklistValues>
                <fullName>£0 - £100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>£101-200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>£201-£1,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>£1,001-£2,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>£2001 - £4000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4000+</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Supplier__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To show whether the account is on the supplier list.</description>
        <label>Supplier</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>System_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates this account is used to hold system relevant information and MUST NOT BE DELETED</description>
        <inlineHelpText>Indicates this account is used to hold system relevant information and MUST NOT BE DELETED</inlineHelpText>
        <label>System Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TEMP_record_count_1__c</fullName>
        <inlineHelpText>For tracking related records for the 99 delete</inlineHelpText>
        <label>TEMP record count 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TMP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TMP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TPS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Account is signed up to Telephone Preference Center</description>
        <inlineHelpText>Account is signed up to Telephone Preference Center</inlineHelpText>
        <label>TPS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Territory_Type__c</fullName>
        <description>Defines area type of associated territory</description>
        <formula>TEXT(Area__r.Type__c)</formula>
        <label>Territory Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Turnover__c</fullName>
        <description>Turnover Bands - Used by IDG data cleansing</description>
        <label>Turnover</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>J</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>K</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>O</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>U</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>V</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>X</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UAN__c</fullName>
        <description>We purchase prospect data from different agencies. This field contains the unique address identifier from the source system from which the Organisation was purchased</description>
        <inlineHelpText>Unique address reference as defined by data supplier/cleanser</inlineHelpText>
        <label>UAN</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UDPRN__c</fullName>
        <description>Unique Delivery Point Reference Number - populated by Postcode anywhere and used to identify records for de-duplication purposes and data validation</description>
        <externalId>true</externalId>
        <inlineHelpText>Unique Delivery Point Reference Number - populated by Postcode anywhere and used to identify records for de-duplication purposes and data validation</inlineHelpText>
        <label>UDPRN</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USN__c</fullName>
        <description>We purchase prospect data from different agencies. This field contains the unique account identifier from the source system from which the Organisation was purchased</description>
        <inlineHelpText>Unique account reference number as defined by ICC data management</inlineHelpText>
        <label>USN</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ultimate_Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Ultimate (top level) Parent Account</description>
        <label>Ultimate Parent</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VAT_Registration_Number__c</fullName>
        <description>VAT Registration Number</description>
        <inlineHelpText>VAT Registration Number</inlineHelpText>
        <label>VAT Registration Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Number__c</fullName>
        <description>For finance to edit only and shows the customer&apos;s in-house unique account number.</description>
        <inlineHelpText>Add the customer&apos;s in-house unique account number</inlineHelpText>
        <label>Vendor Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Venue_Access_Notes__c</fullName>
        <defaultValue>&quot;Please note that venues may charge for the use of their parking facilities, particularly in London, and delegates are advised to make enquiries directly with the venue prior to course commencement.&quot;</defaultValue>
        <inlineHelpText>Venue Directions or notes. Used for JIs from Conga</inlineHelpText>
        <label>Venue Access Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Venue_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The main contact that candidates on courses should contact (used as the &quot;Venue Contact&quot; on event booking forms etc).</inlineHelpText>
        <label>Venue Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Id</valueField>
            </filterItems>
            <infoMessage>The venue contact must exist on the account.</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (Venue Contact)</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Venue_Delegate_Day_Rate__c</fullName>
        <inlineHelpText>Default delegate day rate charged by Venue, if applicable</inlineHelpText>
        <label>Venue Delegate Day Rate</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Venue_Flat_Rate__c</fullName>
        <inlineHelpText>Default flat rate charged by venue</inlineHelpText>
        <label>Venue Flat Rate</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Venue_Website_Link__c</fullName>
        <description>Links to the corporate website page which shows venue specific information - used in Drawloop ddps (booking confirmation)</description>
        <inlineHelpText>If this account is a venue insert the URL to the web page which holds venue information</inlineHelpText>
        <label>Venue Website Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Venue__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Can this Account be used as a venue?</description>
        <inlineHelpText>Can this Account be used as a venue?</inlineHelpText>
        <label>Venue?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Won_Opportunities__c</fullName>
        <label>Won Opportunities</label>
        <summaryFilterItems>
            <field>Opportunity.IsWon</field>
            <operation>equals</operation>
            <value>TRUE</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>X18_Digit_Account_Id__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>18 Digit Account Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODAAccountTradingCurrency__c</fullName>
        <label>Account Trading Currency</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODAAccountsPayableControl__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A vendor must refer to a GLA for it to be used in making a posting. This association is inherited from the Accounting Dimension.</description>
        <label>Accounts Payable Control</label>
        <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Accounts (Accounts Payable Control Account)</relationshipLabel>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CODAAccountsReceivableControl__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>An appropriate accounts receivable (or trade debtors) general ledger account.</description>
        <label>Accounts Receivable Control</label>
        <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CODAAllowDeleteInUse__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Deletion of Account in Use</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__CODABankAccountName__c</fullName>
        <description>The name of the bank account</description>
        <label>Bank Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODABankAccountNumber__c</fullName>
        <description>The account number</description>
        <label>Bank Account Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODABankAccountReference__c</fullName>
        <description>The account reference, sometimes required for electronic transfers</description>
        <label>Bank Account Reference</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODABankCity__c</fullName>
        <description>The city</description>
        <label>Bank City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODABankCountry__c</fullName>
        <description>The country</description>
        <label>Bank Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODABankFax__c</fullName>
        <description>The fax number</description>
        <label>Bank Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>c2g__CODABankIBANNumber__c</fullName>
        <description>The IBAN number</description>
        <label>Bank IBAN Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODABankName__c</fullName>
        <description>The name of the bank</description>
        <label>Bank Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODABankPhone__c</fullName>
        <description>The bank phone number</description>
        <label>Bank Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>c2g__CODABankSWIFTNumber__c</fullName>
        <description>The SWIFT or similar number</description>
        <label>Bank SWIFT Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODABankSortCode__c</fullName>
        <description>The sort code / bank identifier</description>
        <label>Bank Sort Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODABankStateProvince__c</fullName>
        <description>The state / county / province</description>
        <label>Bank State/Province</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODABankStreet__c</fullName>
        <label>Bank Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>c2g__CODABankZipPostalCode__c</fullName>
        <description>The postal code</description>
        <label>Bank Zip/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODABaseDate1__c</fullName>
        <description>The date on which terms will be calculated.</description>
        <label>Base Date 1</label>
        <picklist>
            <picklistValues>
                <fullName>End of Next Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invoice Date</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Start of Next Month</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>c2g__CODABaseDate2__c</fullName>
        <description>The date on which terms will be calculated</description>
        <label>Base Date 2</label>
        <picklist>
            <picklistValues>
                <fullName>End of Next Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invoice Date</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Start of Next Month</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>c2g__CODABaseDate3__c</fullName>
        <description>The date on which terms will be calculated</description>
        <label>Base Date 3</label>
        <picklist>
            <picklistValues>
                <fullName>End of Next Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invoice Date</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Start of Next Month</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>c2g__CODABillingAddressIsValid__c</fullName>
        <formula>NOT(ISBLANK(BillingStreet) &amp;&amp;
ISBLANK(BillingCity) &amp;&amp;
ISBLANK(BillingState) &amp;&amp;
ISBLANK(BillingPostalCode) &amp;&amp;
ISBLANK(BillingCountry)) &amp;&amp;
c2g__CODAValidatedBillingStreet__c == BillingStreet &amp;&amp;
c2g__CODAValidatedBillingCity__c == BillingCity &amp;&amp;
c2g__CODAValidatedBillingState__c == BillingState &amp;&amp;
c2g__CODAValidatedBillingPostCode__c == BillingPostalCode &amp;&amp;
c2g__CODAValidatedBillingCountry__c == BillingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Address Validated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__CODABillingMethod__c</fullName>
        <description>The billing method</description>
        <label>Billing Method</label>
        <picklist>
            <picklistValues>
                <fullName>Electronic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self-billing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>c2g__CODACreditAgency__c</fullName>
        <description>The name of the credit agency</description>
        <label>Credit Agency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODACreditLimitEnabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set to enable the credit limit</description>
        <label>Credit Limit Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__CODACreditLimitReviewed__c</fullName>
        <description>The date when the limit was last reviewed</description>
        <label>Credit Limit Reviewed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>c2g__CODACreditLimit__c</fullName>
        <description>The credit limit in org currency</description>
        <label>Credit Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__CODACreditManager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The manager responsible for the credit details</description>
        <label>Credit Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CODACreditRatingReviewed__c</fullName>
        <description>The date the rating was last reviewed</description>
        <label>Credit Rating Reviewed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>c2g__CODACreditRating__c</fullName>
        <description>The rating given by the credit agency</description>
        <label>Credit Rating</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODACreditReference__c</fullName>
        <description>The reference at the credit agency</description>
        <label>Credit Reference</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODACreditStatus__c</fullName>
        <description>The current credit status. The picklist is user-definable</description>
        <label>Credit Status</label>
        <picklist>
            <picklistValues>
                <fullName>Credit Allowed</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cash with Order</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>c2g__CODADaysOffset1__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The number of days to add to the base date</description>
        <label>Days Offset 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__CODADaysOffset2__c</fullName>
        <description>The number of days to add to the base date</description>
        <label>Days Offset 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__CODADaysOffset3__c</fullName>
        <description>The number of days to add to the base date</description>
        <label>Days Offset 3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__CODADefaultExpenseAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The default GLA on expense lines.</description>
        <label>Default Expense Account</label>
        <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Accounts (Default Expense Account)</relationshipLabel>
        <relationshipName>Accounts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CODADescription1__c</fullName>
        <description>The description of the settlement terms</description>
        <label>Description 1</label>
        <length>24</length>
        <type>Text</type>
    </fields>
</CustomObject>